--- a/changelog.txt
+++ b/changelog.txt
@@ -2,3 +2,4 @@ Stream manapulation proj
 
 2015.08.27 Qiniu-pili c-sdk testing model
 2015.09.07 Multipath RTSP clients support
+2015.09.21 Support multi-threading RTMP senders
