--- a/changelog.txt
+++ b/changelog.txt
@@ -3,3 +3,4 @@ Stream manapulation proj
 2015.08.27 Qiniu-pili c-sdk testing model
 2015.09.07 Multipath RTSP clients support
 2015.09.21 Support multi-threading RTMP senders
+2015.09.29 Monitor multipath RTSP client daemon
